# fire-severity-unet

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: cnn_lulc_binary.yaml  default.yaml  leftraru.yaml  leftraru_4class.yaml  leftraru_binary.yaml
docs/: METHODOLOGY.md
scripts/: analyze_results.py  evaluate_cnn_lulc_binary.py  generate_cnn_patches.py  generate_patches.py  ingest_top45_rasters.py  inspect_fire_rasters.py  interpret_cnn_lulc_binary.py  prepare_rasters.py  run_leftraru_binary.sh  slurm_analyze_binary.sh  slurm_env.sh  slurm_train_binary.sh  slurm_train_binary_fold0.sh  slurm_train_binary_holdout.sh  slurm_train_cnn_lulc_binary.sh  train.py  train_cnn_lulc_binary.py  upload_results_gcs.sh
src/fire_severity/: __init__.py  config.py
src/fire_severity/cnn/: __init__.py  augment.py  dataset.py  evaluate.py  interpret.py  model.py  patches.py  train.py
src/fire_severity/data/: alignment.py  dataset.py  encoding.py  ingest.py  patches.py  severity.py
src/fire_severity/interpretability/: analysis.py  landscape_metrics.py
src/fire_severity/models/: unet.py
src/fire_severity/training/: loss.py  trainer.py
src/fire_severity/validation/: splits.py
